# AICarMaker

./: README.md  pyproject.toml  requirements.txt
aicarmaker_app/: __init__.py  main.py
aicarmaker_app/services/: gemini_client.py  render_service.py
aicarmaker_app/ui/: main_window.py  widgets.py
aicarmaker_app/utils/: file_utils.py
